oxiplate-derive/tests/broken/derive/parent-directory.stderr
error: Template path `$DIR/README.md` not within template directory `$DIR/templates`
 --> tests/broken/derive/parent-directory.rs:4:14
  |
4 | #[oxiplate = "../README.md"]
  |              ^^^^^^^^^^^^^^
